fix: marquee overflow

--- a/app/landing.module.scss
+++ b/app/landing.module.scss
@@ -240,8 +240,8 @@
 }
 
 .pictureCard {
-  height: 30vh;
   width: 30vh;
+
   margin-bottom: 2rem;
   // background-color: var(--color-background);
   perspective: 1000px;
